Adding new changes...

--- a/src/app/@core/components/login/login.component.html
+++ b/src/app/@core/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container mx-auto" *ngIf="isExistingUser">
   <div class="flex justify-center items-center" style="height: 99dvh;">
-    <div class="card lg:card-side bg-base-100 shadow-xl">
+    <div class="card lg:card-side bg-base-100 shadow-xl flex flex-row gap-2">
       <figure>
         <img src="assets/images/icon.png" style="height: 550px !important;" alt="Album" />
       </figure>
